@@ -4,5 +4,6 @@
                  [org.clojure/clojure-contrib "1.2.0"]]
   :dev-dependencies [[swank-clojure "1.3.0-SNAPSHOT"]
                      [lein-search "0.3.3"]
-                     [criterium "0.0.1-SNAPSHOT"]]
-  :jvm-flags ["-XX:+UseConcMarkSweepGC" "-Xmx1g" "-XX:+UseCompressedOops"])
+                     [criterium "0.0.1-SNAPSHOT"]
+                     [lein-difftest "1.3.1"]]
+  :hooks [leiningen.hooks.difftest])
